[tool.poetry]
name = "workbench_utils"
version = "0.1.0"
description = 'Utility functions for workbench projects'
authors = ["Jasper Ginn <jasperginn@gmail.com>"]
maintainers = ["Jasper Ginn <jasperginn@gmail.com>"]
repository = "https://github.com/JasperHG90/workbench-utils"
license = "MIT"
packages = [
    {include = "workbench_utils"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
loguru = "^0.5.3"
python-dotenv = "^0.18.0"
nptyping = "1.4.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.812"
pre-commit = "^2.12.1"
pytest = "^5.2"
pytest-cov = "^2.11.1"
pytest-dotenv = "^0.5.2"
isort = "^5.9.2"
python-semantic-release = "7.28.1"
black = "^22.3.0"
myst-nb = "^0.15.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
ipykernel = "^6.15.1"

[tool.black]
line-length = 88
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | notebooks
  )
)
'''

[tool.isort]
profile = "black"
extend_skip = ["notebooks"]

[tool.semantic_release]
version_variable = [
  "pyproject.toml:version",
  "src/pangolin/__init__.py:__version__"
]
branch = "main"                             # branch to make releases of
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
changelog_file = "CHANGELOG.md"
changelog_sections = "feature, build, refactor, style, test, fix, breaking, documentation, performance"
version_source = "commit"
commit_message = "{version} [ci skip]"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

